Jan 13, 2023
  updated build.gradle to be gradle 6.x + compatible

Oct 31, 2022
  genes: added sorting of lines, to be tabix-ready (gff3 file will be instantly ready to be used by tabix)
  Gff3ColumnWriter: better reporting of features with start pos > stop pos

Oct 27, 2022
  agr: added handling of tr biotype 'protein_coding_CDS_not_defined'

Oct 18, 2022
  fixed typo in config for loading rn7 gene tracks

Oct 17, 2022
  fixed typo in JBrowse loading script

Sep 21, 2022
  load positions for UTH assemblies from gff3 file

Sep 12, 2022
  new tool to prep UTH gff3 files

Sep 12, 2022
  gff3 tracks for CHEBI are generated only for rat, mouse and human (there is very little data available for other species)
  JBrowse: loads CHEBI tracks only for rat, mouse and human

Sep 09, 2022
  jbrowse scripts: changed JBrowse-1.16.3 into JBrowse-1.16.11 to avoid perl problems on new machine

Aug 08, 2022
  agr: fix in tr biotype processing

Jul 07, 2022
  agr: tr biotype: fix for genes of type 'gene'
  agr: updated header for generated gff3 files

May 23, 2022
  fixed typo in EnsemblPrep

May 19, 2022
  updated Ensembl JBrowse tracks from build 101 to 106; new assemblies: mRatBN7.2.106, GRCm39.106, ROS_Cfam.1.0.106
  added generation of JBrowse tracks loading script
  genes: added extract of dog assembly ROS_Cfam_1.0

Feb 23, 2022
  strain specific variants: added generation and loading of strain specific variant and damaging variants for rn7

Feb 04, 2022
  strains: added verbose gff3 header

Feb 03, 2022
  strains: simplified code for handling strains

Jan 19, 2022
  agr: switched to assembly rn7 for rat
  updated log4j to avoid zero day exploit

Nov 30, 2021
  added generation of ontology/CHEBI tracks for GRCm39 assembly
  sped up generation of ontology files

Nov 02, 2021
  agr: fixed

Sep 24, 2021
  ontology extractor: fixed names for generated ontology files, for vervet and molerat

Sep 21, 2021